--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -18,22 +18,32 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
+<div class="w-full flex justify-center">
+
+    <div class="grid grid-cols-6 gap-4">     
+
         <div class="col-span-4 col-start-2">
-            <div class="grid grid-cols-6 sm:grid-cols-1 gap-4 container-w980">
-                <div class="col-span-3 sm:col-span-1 md:col-span-3">
-                    {{ element_1.video_url }}
-                </div>
-                <div class="col-span-3 sm:col-span-1 md:col-span-3 ">
-                    <p class="">
-                        {{ element_1.text }}
-                    </p>
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="grid grid-cols-12 gap-y-8">
+                        <div class="col-span-12 lg:col-span-6">
+                            <div class="text-center xl:text-left">
+                                {{ element_1.video_url }}
+                            </div>
+                        </div>
+
+                        <div class="col-span-12 lg:col-span-6 text-center">
+                            {{ element_1.text }}
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
+
 </div>
+
 <div class="w-full flex justify-center bg-white">
     <div class="w-full bubble-line-container pt-2">
         <div class="image-wrapper w-full">
@@ -44,83 +54,132 @@
 
 
 
-<div class="grid grid-cols-12 gap-y-8 container-w980">      
-
-    <div class="accordion-static ">
-        <!-- Item 1 -->
-        <details name="acc" class="group">
-            <summary
-                class="flex items-center justify-between cursor-pointer p-4 select-none
-                transition-colors open:bg-blue-50 open:text-blue-700
-                [&::-webkit-details-marker]:hidden">
-                <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
-                <!-- chevron -->
-                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                </svg>
-            </summary>
-            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                <div class="p-4 pt-0 text-sm accordion-static-body">
-                    {{ element_2.accordion_1_body }}
-                </div>
-            </div>
-        </details>
-
-        <!-- Item 2 -->
-        <details name="acc" class="group">
-            <summary
-                class="flex items-center justify-between cursor-pointer p-4 select-none
-                transition-colors open:bg-blue-50 open:text-blue-700
-                [&::-webkit-details-marker]:hidden">
-                <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
-                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                </svg>
-            </summary>
-            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                <div class="p-4 pt-0 text-sm accordion-static-body">
-                    {{ element_2.accordion_2_body }}
-                </div>
-            </div>
-        </details>
-
-        <!-- Item 3 -->
-        <details name="acc" class="group">
-            <summary
-                class="flex items-center justify-between cursor-pointer p-4 select-none
-                transition-colors open:bg-blue-50 open:text-blue-700
-                [&::-webkit-details-marker]:hidden">
-                <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
-                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                </svg>
-            </summary>
-            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                <div class="p-4 pt-0 text-sm accordion-static-body">
-                    {{ element_2.accordion_3_body }}
-                </div>
-            </div>
-        </details>
-
-        <details name="acc" class="group">
-            <summary
-                class="flex items-center justify-between cursor-pointer p-4 select-none
-                transition-colors open:bg-blue-50 open:text-blue-700
-                [&::-webkit-details-marker]:hidden">
-                <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
-                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                </svg>
-            </summary>
-            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                <div class="p-4 pt-0 text-sm accordion-static-body">
-                    {{ element_2.accordion_4_body }}
-                </div>
-            </div>
-        </details>
+<div class="accordion">
+  <div class="accordion-item">
+    <input type="checkbox" id="item1">
+    <label for="item1" class="accordion-header">Accordion Item 1</label>
+    <div class="accordion-content">
+      <div class="grid-layout">
+        <p>Column 1 content for item 1.</p>
+        <p>Column 2 content for item 1.</p>
+      </div>
     </div>
+  </div>
+
+  <div class="accordion-item">
+    <input type="checkbox" id="item2">
+    <label for="item2" class="accordion-header">Accordion Item 2</label>
+    <div class="accordion-content">
+      <div class="grid-layout">
+        <p>Column 1 content for item 2.</p>
+        <p>Column 2 content for item 2.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <input type="checkbox" id="item3">
+    <label for="item3" class="accordion-header">Accordion Item 3</label>
+    <div class="accordion-content">
+      <div class="grid-layout">
+        <p>Column 1 content for item 3.</p>
+        <p>Column 2 content for item 3.</p>
+      </div>
+    </div>
+  </div>
 </div>
 
+
+
+
+<div class="w-full flex justify-center">
+
+    <div class="grid grid-cols-6 gap-4">     
+
+        <div class="col-span-4 col-start-2">
+            
+                <div class="container-w980">
+                    <div class="grid grid-cols-12 gap-y-8">
+
+                        <div class="accordion-static ">
+                            <!-- Item 1 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
+                                    <!-- chevron -->
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_1_body }}
+                                    </div>
+                                </div>
+                            </details>
+
+                            <!-- Item 2 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_2_body }}
+                                    </div>
+                                </div>
+                            </details>
+
+                            <!-- Item 3 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_3_body }}
+                                    </div>
+                                </div>
+                            </details>
+
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
+                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_4_body }}
+                                    </div>
+                                </div>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+            
+        </div>
+    </div>
+</div>
 
 
 
@@ -159,7 +218,7 @@
     </div>
 
 </div>
-ddd
+
 
 
 <!-- ELEMENT 4 four cards -->
