--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -57,14 +57,14 @@
 
 <div class="w-full flex justify-center">
 
-    <div class="grid grid-cols-6 gap-4">     
+    <div class="grid w-full grid-cols-6 gap-4">     
 
-        <div class="col-span-4 col-start-2">
+        <div class="col-span-4 col-start-2 w-full">
             
-                <div class="container-w980">
+                <div class="container-w980 w-full">
                     <div class="grid grid-cols-12 gap-y-8">
 
-                        <div class="accordion-static ">
+                        <div class="accordion-static col-span-full w-full">
                             <!-- Item 1 -->
                             <details name="acc" class="group">
                                 <summary
