--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -59,7 +59,7 @@
 
     <div class="grid w-full grid-cols-6 gap-4">     
 
-        <div class="col-span-4 col-start-2 w-full">
+        <div class="col-span-4 col-start-2 w-full flex justify-center">
             
                 <div class="container-w980 w-full">
                     <div class="grid grid-cols-12 gap-y-8">
