--- a/arche-react/de/deposition-process.html
+++ b/arche-react/de/deposition-process.html
@@ -10,7 +10,7 @@
                     </h5>
                     <h2 id="how-does-the-data-deposition-work" class="section-header-title">
                         {{ element_1.header_title }}
-                        <a href="#how-does-the-data-deposition-work" class="anchor-link" aria-label="Link to this section: How does the data deposition work?">#</a>
+                        <a href="#how-does-the-data-deposition-work" class="anchor-link" aria-label="Link to this section: {{ element_1.header_title }}">#</a>
                     </h2>
                 </div>
             </div>
