--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -2,13 +2,8 @@
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
-                <div class="container mission-container">
-                    <div class="grid grid-cols-12 gap-y-8">
-
-
-
-
-
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
                         <p>
                             <strong>{{ element_1.intro }}</strong>
                         </p>
@@ -137,8 +132,8 @@
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
-                <div class="container mission-container">
-                    <div class="grid grid-cols-12 gap-y-8">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8 justify-content">
                         <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
 
                     </div>
