--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -101,9 +101,9 @@
                             <br>
                             &nbsp;
                         </p>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6">
+                        
+                            <div class="grid grid-cols-12">
+                                <div class="grid-cols-6">
                                     <p>
                                         <strong>{{ bottom.label_1 }}</strong>
                                     </p>
@@ -111,7 +111,7 @@
                                         {{ bottom.date_sign }}
                                     </p>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="grid-cols-6">
                                     <p class="pt-2">
                                         <strong>{{ bottom.label_2 }}</strong>
                                     </p>
@@ -120,7 +120,6 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -128,7 +127,7 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center">
+<div class="w-full flex justify-center pb-20">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
