--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -1,4 +1,4 @@
-<div class="w-full flex justify-center">
+<div class="w-full flex justify-center pt-20">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
@@ -132,7 +132,7 @@
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
                 <div class="container-w980">
-                    <div class="flex flex-col gap-8 justify-content">
+                    <div class="flex flex-col gap-8 justify-center">
                         <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
 
                     </div>
