--- a/arche-react/de/deposition-agreement.html
+++ b/arche-react/de/deposition-agreement.html
@@ -1,4 +1,4 @@
-<div class="w-full flex justify-center mt-10">
+<div class="w-full flex justify-center pt-20">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
@@ -127,7 +127,7 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center mb-[100px]">
+<div class="w-full flex justify-center pb-20">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
