--- a/arche-react/en/filenames-formats-metadata.html
+++ b/arche-react/en/filenames-formats-metadata.html
@@ -33,28 +33,33 @@
 
 <!-- formats -->
 
-<div class="container-fluid bg-white m-0 p-0">
-    <div class="container maxw-980 bg-white">
-        <div class="row gx-5 justify-content-center">
-            <div class="col">
-                <div class="my-5 text-center">
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
                     <h5 class="section-header-title-small">
                         {{ element_2.header_title_small }}&nbsp;
                     </h5>
-                    <h2 class="section-header-title" id="formats">
+                    <h2 id="formats" class="section-header-title">
                         {{ element_2.header_title }}&nbsp;<a class="anchor-link" href="#formats" aria-label="Link to this section: Formats">#</a>
                     </h2>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container maxw-980 bg-white padding-bottom24">
-        <div class="row gx-5 justify-content-center">
-            <div class="col text-left">
-                {{ element_2.content }}
+</div>
+
+<div class="w-full flex justify-center">
+
+    <div class="grid grid-cols-6 gap-4">     
+
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    {{ element_2.content }}
                 <div class="filenames-formats-dynamic-table-en"></div>
-
-
+                </div>
             </div>
         </div>
     </div>
@@ -62,27 +67,35 @@
 
 <!-- metadata -->
 
-<div class="container-fluid bg-white m-0 p-0">
-    <div class="container maxw-980 bg-white">
-        <div class="row gx-5 justify-content-center">
-            <div class="col">
-                <div class="my-5 text-center">
+
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
                     <h5 class="section-header-title-small">
-                        {{ element_3.header_title_small }}
+                        {{ element_3.header_title_small }}&nbsp;
                     </h5>
-                    <h2 class="section-header-title" id="metadata">
+                    <h2 id="metadata" class="section-header-title">
                         {{ element_3.header_title }}&nbsp;<a class="anchor-link" href="#metadata" aria-label="Link to this section: Metadata">#</a>
                     </h2>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container maxw-980 bg-white padding-bottom24">
-        <div class="row gx-5 justify-content-center">
-            <div class="col text-left">
-                {{ element_3.content }}
+</div>
+
+<div class="w-full flex justify-center">
+
+    <div class="grid grid-cols-6 gap-4">     
+
+        <div class="col-span-4 col-start-2">
+            <div class="w-full ">
+                <div class="container-w980">
+                    {{ element_3.content }}
                 <div id="metadata-table">
                     &nbsp;
+                </div>
                 </div>
             </div>
         </div>
