--- a/arche-react/en/filenames-formats-metadata.html
+++ b/arche-react/en/filenames-formats-metadata.html
@@ -58,7 +58,7 @@
             <div class="w-full ">
                 <div class="container-w980">
                     {{ element_2.content }}
-                <div class="filenames-formats-dynamic-table-en"></div>
+                    <div class="filenames-formats-dynamic-table-en"></div>
                 </div>
             </div>
         </div>
@@ -93,9 +93,9 @@
             <div class="w-full ">
                 <div class="container-w980">
                     {{ element_3.content }}
-                <div id="metadata-table">
-                    &nbsp;
-                </div>
+                    <div id="metadata-table">
+                        &nbsp;
+                    </div>
                 </div>
             </div>
         </div>
@@ -104,86 +104,129 @@
 
 <!-- cards -->
 
-<div class="container px-5 ">
-    <div class="row gx-5 align-items-center justify-content-center">
-        <div class="col">
-            <div class="my-5 text-center">
-                <p class="section-header-title-small">
-                    {{ element_4.cards_header_title_small }}
-                </p>
-                <p class="section-header-title">
-                    {{ element_4.cards_header_title }}
-                </p>
+<div class="w-full flex justify-center bg-white">
+    <div class="grid grid-cols-6 gap-4 w-full">
+        <div class="col-span-4 col-start-2">
+            <div class="w-full">
+                <div class="my-12 text-center">
+                    <h5 class="section-header-title-small">
+                        {{ element_4.cards_header_title_small }}
+                    </h5>
+                    <h2 id="how-does-the-data-deposition-work" class="section-header-title">
+                        {{ element_4.cards_header_title }}                        
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container maxw-980">
-    <div class="row-fluid">
-        <div class="container ">
-            <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_1_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                            </p>
+<div class="w-full flex justify-center cards-container">
+    <div class="grid grid-cols-6 gap-4">
+        <div class="col-span-4 col-start-2 container-w980">
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_1_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_2_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
-                            </p>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_2_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_3_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
-                            </p>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_3_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-5">
-                    <div class="card h-100 shadow border-0 d-flex align-items-center justify-content-center">
-                        <img class="card-img-top cards-static-images img-fluid" src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}" width="100%" height="100%">
-                        <div class="card-body home-resources-body p-4">
-                            <h5 class="card-title mb-3">
-                                <a class="text-start" href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
-                            </h5>
-                            <p class="card-text home-resources-text text-start">
-                                {{ element_4.card_4_text }}
-                            </p>
-                            <p style="display:contents;">
-                                <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
-                            </p>
+                <div class="">
+                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
+                        <div class="h-full shadow bg-white flex flex-col border-0">
+                            <img
+                                class="card-img-top cards-static-images max-w-full h-auto"
+                                src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
+                                loading="lazy"
+                                />
+
+                            <div class="card-body home-resources-body p-4 h-full">
+                                <h5 class="card-title mb-3">
+                                    <a class="text-left block"  href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
+                                </h5>
+
+                                <p class="card-text home-resources-text text-left  h-full">
+                                    {{ element_4.card_4_text }}
+                                </p>
+
+                                <!-- display: contents -->
+                                <p class="contents">
+                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -191,3 +234,5 @@
         </div>
     </div>
 </div>
+
+
