--- a/arche-react/en/filenames-formats-metadata.html
+++ b/arche-react/en/filenames-formats-metadata.html
@@ -58,7 +58,7 @@
             <div class="w-full ">
                 <div class="container-w980">
                     {{ element_2.content }}
-                    <div class="filenames-formats-dynamic-table-en"></div>
+                    <div id="filenames-formats-dynamic-table"></div>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     <h5 class="section-header-title-small">
                         {{ element_4.cards_header_title_small }}
                     </h5>
-                    <h2 id="how-does-the-data-deposition-work" class="section-header-title">
+                    <h2 id="cards" class="section-header-title">
                         {{ element_4.cards_header_title }}                        
                     </h2>
                 </div>
