--- a/arche-react/en/technical-setup.html
+++ b/arche-react/en/technical-setup.html
@@ -1,10 +1,14 @@
-<div class="w-full flex justify-center mt-10">
-    <div class="grid grid-cols-6 gap-4">
+<div class="w-full flex justify-center">
+
+    <div class="grid grid-cols-6 gap-4">     
+
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
-                <div class="container-w980">
-                    <div class="flex flex-col gap-8">
-                        {{ element_1.intro }}      
+                <div class="container mission-container">
+                    <div class="grid grid-cols-12 gap-y-8">
+                        <div class="col-span-12">
+                            {{ element_1.intro }}      
+                        </div>
                     </div>
                 </div>
             </div>
@@ -47,8 +51,8 @@
             <div class="w-full">
                 <div class="my-12 text-center">
                     <h2 class="section-header-title" id="client-libraries">
-                    {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
-                </h2>
+                        {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
+                    </h2>
                 </div>
             </div>
         </div>
