--- a/arche-react/en/technical-setup.html
+++ b/arche-react/en/technical-setup.html
@@ -1,20 +1,17 @@
-<div class="w-full flex justify-center">
-
-    <div class="grid grid-cols-6 gap-4">     
-
+<div class="w-full flex justify-center mt-10">
+    <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
             <div class="w-full ">
-                <div class="container mission-container">
-                    <div class="grid grid-cols-12 gap-y-8">
-                        <div class="col-span-12">
-                            {{ element_1.intro }}      
-                        </div>
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_1.intro }}      
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
@@ -32,12 +29,16 @@
         </div>
     </div>
 </div>
-<div class="w-full flex justify-center bg-white">
+
+
+<div class="w-full flex justify-center mt-10">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    {{ element_2.content }}
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_2.content }}
+                    </div>
                 </div>
             </div>
         </div>
@@ -58,20 +59,20 @@
         </div>
     </div>
 </div>
-<div class="w-full flex justify-center bg-white">
+
+<div class="w-full flex justify-center mt-10">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    {{ element_3.content }}
+            <div class="w-full ">
+                <div class="container-w980">
+                    <div class="flex flex-col gap-8">
+                        {{ element_3.content }}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
 
 
 <div class="container maxw-980">
