--- a/arche-react/en/technical-setup.html
+++ b/arche-react/en/technical-setup.html
@@ -16,14 +16,16 @@
 
 
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h2 class="section-header-title" id="software-stack">
-                        {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
-                    </h2>
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                        <h2 class="section-header-title" id="software-stack">
+                            {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                        </h2>
+                    </div>
                 </div>
             </div>
         </div>
