--- a/arche-react/de/faq.html
+++ b/arche-react/de/faq.html
@@ -1,17 +1,19 @@
 
 <!-- Accordion 1 -->
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h5 class="section-header-title-small">
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                        <h5 class="section-header-title-small">
                         {{ element_1.header_title_small }} 
                     </h5>
                     <h2 id="archive-data" class="section-header-title">
                         {{ element_1.header_title }}&nbsp;<a class="anchor-link" href="#archive-data" aria-label="Link to this section: Archive Data">#</a>
                     </h2>
+                    </div>
                 </div>
             </div>
         </div>
@@ -331,17 +333,19 @@
 
 <!-- Accordion 2 -->
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h5 class="section-header-title-small">
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                      <h5 class="section-header-title-small">
                         {{ element_2.header_title_small }} 
                     </h5>
                     <h2 class="section-header-title" id="search-and-use-data">
                         {{ element_2.header_title }}&nbsp;<a class="anchor-link" href="#search-and-use-data" aria-label="Link to this section: Search and Use Data">#</a>
                     </h2>
+                    </div>
                 </div>
             </div>
         </div>
@@ -531,17 +535,19 @@
 <!-- Accordion 3 -->
 
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h5 class="section-header-title-small">
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                      <h5 class="section-header-title-small">
                         {{ element_3.header_title_small }}
                     </h5>
                     <h2 class="section-header-title" id="practical-tips-for-depositors">
                         {{ element_3.header_title }}&nbsp;<a class="anchor-link" href="#practical-tips-for-depositors" aria-label="Link to this section: Practical Tips for Depositors">#</a>
                     </h2>
+                    </div>
                 </div>
             </div>
         </div>
@@ -855,18 +861,19 @@
 
 <!-- Accordion 4 -->
 
-
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h5 class="section-header-title-small">
+<div class="w-full flex justify-center">
+    <div class="container">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full">
+                    <div class="my-12 text-center">
+                       <h5 class="section-header-title-small">
                         {{ element_4.header_title_small }}
                     </h5>
                     <h2 class="section-header-title" id="technical-basis">
                         {{ element_4.header_title }}&nbsp;<a class="anchor-link" href="#technical-basis" aria-label="Link to this section: Technical Basis">#</a>
                     </h2>
+                    </div>
                 </div>
             </div>
         </div>
